docs: add Phase 5 JMH benchmark results and empirical analysis to README